--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,25 +1,3 @@
 backend:
-  name: github
-  repo: jordanlewa/ox2static
+  name: git-gateway
   branch: main
-  auth_scope: repo
-  auth_endpoint: https://github.com/login/oauth/authorize
-  login:
-    client_id: Ov23li2lNV2JWxJNicYF
-    client_secret: f697c0d3055aa76f3f10465cea8adba38af58b56
-
-media_folder: "public/uploads"
-public_folder: "/uploads"
-
-auth:
-    redirect_uri: https://ox2static.vercel.app/admin/callback
-
-collections:
-  - name: "posts"
-    label: "Blog Posts"
-    folder: "content/posts"
-    create: true
-    slug: "{{slug}}"
-    fields:
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Body", name: "body", widget: "markdown" }
